--- a/app/pages/setup/setup.html
+++ b/app/pages/setup/setup.html
@@ -4,12 +4,22 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+<!--<ion-header>-->
+  <!--<ion-navbar>-->
+    <!--<ion-title>Popovers</ion-title>-->
+    <!--<ion-buttons end>-->
+      <!--<button (click)="presentPopover($event)" >-->
+        <!--<ion-icon name="more"></ion-icon>-->
+      <!--</button>-->
+    <!--</ion-buttons>-->
+  <!--</ion-navbar>-->
+<!--</ion-header>-->
 <ion-content padding class="setup">
   <ion-grid>
 
     <ion-row>
       <ion-col class="topSLogan" width-100 >
-        <h4 >{{ data.setUpTitle }}</h4>
+        <h4 secondary >{{ data.setUpTitle }}</h4>
         <!--<img [src]="data.logoUrl" >-->
       </ion-col>
 
@@ -50,13 +60,13 @@
     </ion-row>
 
     <ion-row *ngIf="!loadingData" >
-      <ion-col width-5></ion-col>
-      <ion-col width-90>
-        <button (click)="loginToServer()" full>
+      <!--<ion-col width-5></ion-col>-->
+      <ion-col width-100>
+        <button (click)="loginToServer()" full secondary>
           Login
         </button>
       </ion-col>
-      <ion-col width-5></ion-col>
+      <!--<ion-col width-5></ion-col>-->
     </ion-row>
   </ion-grid>
 
