--- a/app/pages/data-element-groups/data-element-groups.html
+++ b/app/pages/data-element-groups/data-element-groups.html
@@ -7,12 +7,23 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>dataElementGroups</ion-title>
+    <ion-title>{{ groupSetName }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="data-element-groups">
+
+  <ion-list>
+    <div *ngFor="let group of metaData">
+      <button ion-item (click)="goToSelectedGroup(group)" >
+        <ion-icon name="list" item-left></ion-icon>
+        <h2>{{group.name}}</h2>
+        <ion-icon name="arrow-round-forward" item-right></ion-icon>
+      </button>
+    </div>
+
+  </ion-list>
 
 </ion-content>
