using data element description on represent data elemnt decription as html

--- a/app/pages/data-element-list/data-element-list.html
+++ b/app/pages/data-element-list/data-element-list.html
@@ -19,7 +19,7 @@
     <button ion-item (click)="goToSelectedDataElement(dataElement)">
       <ion-icon name="list" item-left></ion-icon>
       <h2>{{dataElement.name}}</h2>
-      <p>{{dataElement.description}}</p>
+      <!--<p [innerHTML]>{{dataElement.description}}</p>-->
       <ion-icon name="arrow-round-forward" item-right></ion-icon>
     </button>
   </div>
