--- a/app/pages/data-element-groups-set/data-element-groups-set.html
+++ b/app/pages/data-element-groups-set/data-element-groups-set.html
@@ -8,6 +8,11 @@
 
   <ion-navbar>
     <ion-title>Home</ion-title>
+    <ion-buttons end>
+      <button (click)="presentPopover($event)">
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
